--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title>SPA App</title>
 
     <!-- Base href for GitHub Pages -->
-    <base href="/" />
+    <base href="/spa-app/" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
